QA Latest Data/main/default/objects/Contact/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <label>Access Token</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>