QA Latest Data/main/default/objects/Contact/fields/Contact_Approver__c.field-meta.xml
<CustomField>
    <fullName>Contact_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ContactApprovers</relationshipName>
    <type>Lookup</type>
</CustomField>