QA Latest Data/main/default/objects/Contact/fields/Mobile_Extension__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Extension__c</fullName>
    <label>Mobile Extension</label>
    <length>5</length>
    <type>Text</type>
</CustomField>