QA Latest Data/main/default/objects/Contact/fields/Primary_Office_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Office_Name__c</fullName>
    <label>Primary Office Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>