QA Latest Data/main/default/objects/Contact/fields/Sales_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Contact</label>
    <type>Checkbox</type>
</CustomField>