QA Latest Data/main/default/objects/Contact/fields/Sub_User_Approved__c.field-meta.xml
<CustomField>
    <fullName>Sub_User_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sub User Approved?</label>
    <type>Checkbox</type>
</CustomField>