QA Latest Data/main/default/objects/Contact/fields/Tier_Level__c.field-meta.xml
<CustomField>
    <fullName>Tier_Level__c</fullName>
    <label>Tier Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>level 1</fullName>
            </value>
            <value>
                <fullName>level 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>