QA Latest Data/main/default/objects/Contact/recordTypes/Trade_Ally_Staff.recordType-meta.xml
<RecordType>
    <fullName>Trade_Ally_Staff</fullName>
    <active>true</active>
    <label>Trade Ally Staff</label>
</RecordType>