QA Latest Data/main/default/objects/Contact/recordTypes/Utility_Customer.recordType-meta.xml
<RecordType>
    <fullName>Utility_Customer</fullName>
    <active>true</active>
    <label>Utility Customer</label>
</RecordType>