QA Latest Data/main/default/objects/Contact/recordTypes/Utility_Staff.recordType-meta.xml
<RecordType>
    <fullName>Utility_Staff</fullName>
    <active>true</active>
    <label>Utility Staff</label>
</RecordType>