QA Latest Data/main/default/objects/Contact/validationRules/Mailing_Country_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mailing_Country_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(MailingCountry)),NOT(OR(MailingCountry = &quot;USA&quot;,MailingCountry = &quot;US&quot;,MailingCountry = &quot;United States&quot;,MailingCountry = &quot;United States of America&quot;)))</errorConditionFormula>
    <errorDisplayField>MailingCountry</errorDisplayField>
    <errorMessage>The Mailing Country Should be United States.</errorMessage>
</ValidationRule>