QA Latest Data/main/default/objects/Contact/validationRules/Mobile_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
NOT(ISBLANK(MobilePhone )), 
NOT(REGEX(MobilePhone , &quot;\\D*?(\\d\\D*?){10}&quot;)) 
)</errorConditionFormula>
    <errorMessage>Please Enter 10 digit Mobile number.</errorMessage>
</ValidationRule>