QA Latest Data/main/default/objects/Contact/validationRules/Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Phone)),
    NOT(REGEX(Phone, &quot;\\D*?(\\d\\D*?){10}&quot;))

)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please Enter a Valid Phone Nubmber</errorMessage>
</ValidationRule>