QA Latest Data/main/default/objects/Contact/validationRules/Postal_Code_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Postal_Code_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK(MailingPostalCode)), 
NOT(REGEX( MailingPostalCode , &quot;\\d{5}(-\\d{4})?&quot;)))</errorConditionFormula>
    <errorDisplayField>MailingPostalCode</errorDisplayField>
    <errorMessage>Please Enter a Valid Zip/Postal Code</errorMessage>
</ValidationRule>