QA Latest Data/main/default/objects/Contact/validationRules/State_Validtion.validationRule-meta.xml
<ValidationRule>
    <fullName>State_Validtion</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
NOT(ISBLANK(MailingState)), 
OR( 
LEN(MailingState) &lt;&gt; 2, 
NOT(CONTAINS(&quot;AL:al:AK:ak:AZ:az:AR:ar:CA:ca:CO:co:CT:ct:DE:de:DC:de:FL:fl:GA:ga:HI:hi:ID:id&quot; &amp; 
&quot;IL:il:IN:in:IA:ia:KS:ky:KY:ks:LA:la:ME:me:MD:md:MA:ma:MI:mi:MN:mn:MS:ms:MO:mo:MT:mt:NE:ne:NV:nv:NH:nh&quot; &amp; 
&quot;NJ:nj:NM:nm:NY:ny:NC:nc:ND:nd:OH:oh:OK:ok:OR:or:PA:pa:RI:ri:SC:sc:SD:sd:TN:tn:TX:tx:UT:ut:VT:vt:VA:va&quot; &amp; 
&quot;WA:wa:WV:wv:WI:wi:WY:wy:PR:pr&quot;, MailingState))))</errorConditionFormula>
    <errorDisplayField>MailingState</errorDisplayField>
    <errorMessage>Please Enter a Valid 2 letter State abbreviation</errorMessage>
</ValidationRule>