QA Latest Data/main/default/objects/Contact/listViews/My_Community_Contacts.listView-meta.xml
<ListView>
    <fullName>My_Community_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Community Contacts</label>
    <sharedTo>
        <allCustomerPortalUsers/>
        <allInternalUsers/>
    </sharedTo>
</ListView>